# catodo

./: .gitignore  README.md  pyproject.toml
core/: config.py  constants.py  logic.py  objects.py  tools.py
tests/: test_core.py
tests/assets/: example_serialized_data.json  single_user_example.json
